[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/SimpleShadingTank_JustGray.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/big_pixel/Big Pixel demo.otf" type="DynamicFontData" id=3]
[ext_resource path="res://AudioMixer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/TankFire.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/muzzle_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemy_ 4b.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemeny_3a.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemeny_3b.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemy_ 4a.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemeny_3c.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemy_2a.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_Destroyed an enemy_light_6a.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_destroyed an enemy_3b.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_destroyed an enemy_2c.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_destroyed an enemy_2a.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemy_2c.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Sounds/Barks/Boom_bark_destroyed an enemy_4c.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_Destroyed an enemy_light_6c.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/Sounds/Barks/Boom_bark_destroyed an enemy_4b.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemy_ 4cwav.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_destroyed an enemy_2b.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_hit an enemy_2b.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/Sounds/Barks/Boom_bark_destroyed an enemy_4a.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_destroyed an enemy_3a.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_destroyed an enemy_3c.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Bark_Destroyed an enemy_light_6b.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Barks_destroyed an enemy_1b.wav" type="AudioStream" id=28]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Barks_Hit an Enemy_1a.wav" type="AudioStream" id=29]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Barks_destroyed an enemy_1a.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Barks_destroyed an enemy_7.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Barks_Hit an Enemy_1c.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/Sounds/Barks/Boom_Barks_Hit an Enemy_1b.wav" type="AudioStream" id=33]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.234, 32 )

[sub_resource type="DynamicFont" id=7]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 45.5, 32 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 50
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 46.125, 32 )
scale = Vector2( 1.46875, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( -2, 22 )
rotation = -3.14159

[node name="Timer" type="Timer" parent="."]
process_mode = 0

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
margin_top = 9.0
margin_right = 92.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifePoints" type="Label" parent="Control/CenterContainer"]
margin_left = 14.0
margin_top = 2.0
margin_right = 78.0
margin_bottom = 28.0
theme = SubResource( 4 )
text = "Lorem"
align = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 50

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 45.5, 32 )
shape = SubResource( 5 )

[node name="MuzzleFlash" type="Node2D" parent="."]
visible = false
position = Vector2( -2, 22 )

[node name="MuzzleFlashSprite" type="Sprite" parent="MuzzleFlash"]
modulate = Color( 1, 0.933333, 0.819608, 1 )
material = SubResource( 6 )
position = Vector2( -17.327, 0 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
z_as_relative = false
texture = ExtResource( 6 )

[node name="MuzzleFlashTimer" type="Timer" parent="MuzzleFlash"]
wait_time = 0.1

[node name="FireSound" type="AudioStreamPlayer" parent="MuzzleFlash"]
stream = ExtResource( 5 )
volume_db = -8.667

[node name="SoundTimer" type="Timer" parent="MuzzleFlash"]
wait_time = 1.03

[node name="AudioMixerHit" parent="." instance=ExtResource( 4 )]
random_selection = [ [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ) ], [ ExtResource( 12 ), ExtResource( 23 ), ExtResource( 17 ) ], [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 21 ) ], [ ExtResource( 29 ), ExtResource( 33 ), ExtResource( 32 ) ] ]

[node name="AudioMixerDestroyed" parent="." instance=ExtResource( 4 )]
random_selection = [ [ ExtResource( 13 ), ExtResource( 27 ), ExtResource( 19 ) ], [ ExtResource( 24 ), ExtResource( 20 ), ExtResource( 18 ) ], [ ExtResource( 25 ), ExtResource( 14 ), ExtResource( 26 ) ], [ ExtResource( 16 ), ExtResource( 22 ), ExtResource( 15 ) ], [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ) ] ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="MuzzleFlash/MuzzleFlashTimer" to="." method="_on_MuzzleFlashTimer_timeout"]
[connection signal="finished" from="MuzzleFlash/FireSound" to="." method="_on_FireSound_finished"]
[connection signal="timeout" from="MuzzleFlash/SoundTimer" to="." method="_on_SoundTimer_timeout"]
